# Nephtys

./: .dockerignore  Dockerfile  config.toml  readme.md  supervisord.conf
server/: .dockerignore  .gitignore  Cargo.toml  config.toml  ffmpeg_command.txt
server/src/: main.rs
server/src/movement_detector/: mod.rs
server/src/routes/: auth.rs
web/: package-lock.json  package.json  server.js  vite.config.ts
web/src/: app.css
web/src/lib/components/: event_item.svelte
web/src/routes/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/setup/: +page.svelte
