[package]
name = "nephtys-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.11.0"
argon2 = {version = "0.5.3", features = ["default", "rand", "password-hash"]}
chrono = "0.4.41"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
getrandom = "0.3.3"
opencv = "0.95.1"
rand = "0.9.2"
rand_core = {version = "0.6", features = ["std", "getrandom"]}
serde = "1.0.219"
serde_json = "1.0.143"
toml = "0.9.5"

[features]

[profile.release]
opt-level=3
strip = true
lto = true
codegen-units = 1